--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -1614,11 +1614,11 @@
             </objects>
             <point key="canvasLocation" x="549.60000000000002" y="3837.9310344827591"/>
         </scene>
-        <!--Archieve-->
+        <!--Archive-->
         <scene sceneID="9h7-KK-bvk">
             <objects>
                 <navigationController id="7gu-p6-Gz0" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Archieve" selectedImage="home-black" id="fcj-sE-8B1"/>
+                    <tabBarItem key="tabBarItem" title="Archive" image="archive" selectedImage="archive-black" id="fcj-sE-8B1"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Y0D-xo-7kF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1863,6 +1863,8 @@
         <image name="Profile-1" width="112" height="112"/>
         <image name="Terms &amp; Conditions" width="18" height="18"/>
         <image name="add-new-black" width="20" height="20"/>
+        <image name="archive" width="16.5" height="20"/>
+        <image name="archive-black" width="16.5" height="20"/>
         <image name="back" width="5" height="9"/>
         <image name="caster-user" width="18" height="17.666666030883789"/>
         <image name="chat" width="23" height="21.5"/>
