--- a/precastr/controller/home/cell/postItemCells/PostDescriptionTableViewCell.xib
+++ b/precastr/controller/home/cell/postItemCells/PostDescriptionTableViewCell.xib
@@ -10,27 +10,35 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="38" id="KGk-i7-Jjw" customClass="PostDescriptionTableViewCell" customModule="precastr" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="385" height="38"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="50" id="KGk-i7-Jjw" customClass="PostDescriptionTableViewCell" customModule="precastr" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="385" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="385" height="38"/>
+                <rect key="frame" x="0.0" y="0.0" width="385" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="toh-la-a0n">
-                        <rect key="frame" x="12" y="0.0" width="360" height="24"/>
+                        <rect key="frame" x="12" y="0.0" width="345" height="32"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cast_pagination_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="ST0-1D-LaP">
+                        <rect key="frame" x="355" y="1" width="20" height="20"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="castPaginationArrow" destination="ST0-1D-LaP" id="YPp-o6-dJ8"/>
                 <outlet property="postDescription" destination="toh-la-a0n" id="T4A-W7-iH5"/>
             </connections>
-            <point key="canvasLocation" x="84.782608695652186" y="139.28571428571428"/>
+            <point key="canvasLocation" x="116.66666666666667" y="25.446428571428569"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="cast_pagination_arrow" width="32" height="32"/>
+    </resources>
 </document>
